--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "json-api-server",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 10000"
+    "start": "node server.js"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^0.17.3"
   }
 }
